-
Bug
-
Resolution: Fixed
-
P3
-
11-pool, 16
-
b01
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8270166 | 11.0.13 | Martin Doerr | P3 | Resolved | Fixed | b01 |
C2 compiler is missing check for infinite loop in PhaseIdealLoop::place_near_use() and as result it crashes when trying to process it as a normal loop.
The expected behavior of the C2 compiler is to simply bail out with "COMPILE
SKIPPED: infinite loop (retry at different tier)". JDK8 passed the test in such way.
The expected behavior of the C2 compiler is to simply bail out with "COMPILE
SKIPPED: infinite loop (retry at different tier)". JDK8 passed the test in such way.
- backported by
-
JDK-8270166 Missing check for infinite loop during node placement
-
- Resolved
-
- relates to
-
JDK-8268417 Add test from JDK-8268360
-
- Resolved
-