8268360: Missing check for infinite loop during node placement